# Prontia

./: agents.md
backend/: .pre-commit-config.yaml  pyproject.toml
backend/app/: main.py
backend/app/api/: conversation.py
backend/app/core/: logging.py  settings.py
backend/app/db/: cosmosdb.py
backend/app/models/: data.py  request.py
backend/app/services/: conversation.py  openai.py  user.py
backend/src/prontia/: __main__.py  app.py
backend/src/prontia/api/: conversation.py
backend/src/prontia/core/: logging.py  settings.py
backend/src/prontia/db/: cosmosdb.py
backend/src/prontia/dto/: conversation.py  message.py
backend/src/prontia/models/: conversation.py  message.py  prompt.py
backend/src/prontia/services/: chat.py  openai.py  user.py
backend/tests/: test_const.py  test_system_integration.py
backend/tests/api/: test_conversation_api.py
backend/tests/prontia/api/: test_conversation_api.py
backend/tests/prontia/db/: test_cosmosdb.py
backend/tests/prontia/services/: test_chat_service.py  test_openai_services.py
backend/tests/services/: test_conversation_service.py  test_openai.py
frontend/: biome.json  index.html  package-lock.json  package.json
frontend/src/: App.tsx  Chat.tsx  ChatConversation.tsx  ChatInput.tsx  ChatQuestion.tsx  ChatResponse.tsx  ChatResponseMenu.tsx  MainContents.tsx  SideMenu.tsx  Theme.tsx
frontend/src/api/: chat.ts  dto.ts
frontend/src/components/Chat/: ChatConversation.tsx  ChatInput.tsx  ChatInputMenu.tsx  ChatInputTheme.tsx  ChatQuestionMenu.tsx  (+2 more)
frontend/src/pages/: Chat.tsx  MainContents.tsx
(+4 files in other folders)
